--- a/index.html
+++ b/index.html
@@ -349,8 +349,7 @@ $(document).ready(function(){
 			<div class="work-item" data-project-id="project-1">
 				<div class="work-img-holder">
 
-						<a href="img/photos/photo-1.jpg" data-lightbox-type="ajax">
-					<img alt="" src="img/thumbnails/thumbnail-1.jpg" /></a>
+						<a href="img/photos/photo-1.jpg" data-lightbox-type="ajax"><img alt="" src="img/thumbnails/thumbnail-1.jpg" /></a>
 
 
 
