--- a/index.html
+++ b/index.html
@@ -349,7 +349,10 @@ $(document).ready(function(){
 			<div class="work-item" data-project-id="project-1">
 				<div class="work-img-holder">
 
-						<a href="img/photos/photo-1.jpg" data-lightbox-type="ajax"><img alt="" src="img/thumbnails/thumbnail-1.jpg" /></a>
+				<a href="img/photos/photo-1.jpg" title="This is an image title">
+    <img src="img/thumbnails/thumbnail-1.jpg" alt="" /></a>
+<a href="http://wikipedia.com">View Website</a>
+<a href="https://www.youtube.com/watch?v=L9szn1QQfas">View Youtube Video</a>
 
 
 
