--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 			<div class="work-item" data-project-id="project-1">
 				<div class="work-img-holder">
 
-					<a href="img/photos/photo-1.jpg" rel="shadowbox"><img src="img/thumbnails/thumbnail-1.jpg"</a>
+					<a href="/img/photos/photo-1.jpg" rel="shadowbox"><img src="/img/thumbnails/thumbnail-1.jpg"</a>
 
 
 
@@ -377,7 +377,7 @@
 			<div class="large-4 columns">
 			<div class="work-item" data-project-id="project-1">
 				<div class="work-img-holder">
-				<a href="img/photos/photo-5.jpg" rel="shadowbox"><img src="img/thumbnails/thumbnail-5.jpg"></a>
+				<a href="/img/photos/photo-5.jpg" rel="shadowbox"><img src="img/thumbnails/thumbnail-5.jpg"></a>
 				</div>
 			</div>
 		</div>
