--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 			<div class="work-item" data-project-id="project-1">
 				<div class="work-img-holder">
 
-					<a href="/img/photos/photo-1.jpg" rel="shadowbox"><img src="/img/thumbnails/thumbnail-1.jpg"</a>
+					<a href="site/wedding-site/img/photos/photo-1.jpg" rel="shadowbox"><img src="site/wedding-site/img/thumbnails/thumbnail-1.jpg"</a>
 
 
 
