--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 			<div class="work-item" data-project-id="project-1">
 				<div class="work-img-holder">
 
-					<a href="img/photos/photo-1.jpg" rel="shadowbox"><img src="img/thumbnails/thumbnail-1.jpg"</a>
+					<a href="img/photos/photo-1.JPG" rel="shadowbox"><img src="img/thumbnails/thumbnail-1.jpg"</a>
 
 
 
@@ -349,7 +349,7 @@
 			<div class="large-4 columns">
 			<div class="work-item" data-project-id="project-1">
 				<div class="work-img-holder">
-				<a href="img/photos/photo-2.jpg" rel="shadowbox"><img src="img/thumbnails/thumbnail-2.jpg"></a>
+				<a href="img/photos/photo-2.JPG" rel="shadowbox"><img src="img/thumbnails/thumbnail-2.jpg"></a>
 				</div>
 			</div>
 		</div>
@@ -357,35 +357,7 @@
 			<div class="large-4 columns">
 			<div class="work-item" data-project-id="project-1">
 				<div class="work-img-holder">
-				<a href="img/photos/photo-3.jpg" rel="shadowbox"><img src="img/thumbnails/thumbnail-3.jpg"></a>
-				</div>
-			</div>
-		</div>
-
-	</div>
-
-	<div class="row work-row">
-
-			<div class="large-4 columns">
-			<div class="work-item" data-project-id="project-1">
-				<div class="work-img-holder">
-				<a href="img/photos/photo-4.jpg" rel="shadowbox"><img src="img/thumbnails/thumbnail-4.jpg"></a>
-				</div>
-			</div>
-		</div>
-
-			<div class="large-4 columns">
-			<div class="work-item" data-project-id="project-1">
-				<div class="work-img-holder">
-				<a href="/img/photos/photo-5.jpg" rel="shadowbox"><img src="img/thumbnails/thumbnail-5.jpg"></a>
-				</div>
-			</div>
-		</div>
-
-			<div class="large-4 columns">
-			<div class="work-item" data-project-id="project-1">
-				<div class="work-img-holder">
-				<a href="img/photos/photo-6.jpg" rel="shadowbox"><img src="img/thumbnails/thumbnail-6.jpg"></a>
+				<a href="img/photos/photo-3.JPG" rel="shadowbox"><img src="img/thumbnails/thumbnail-3.jpg"></a>
 				</div>
 			</div>
 		</div>
@@ -397,7 +369,7 @@
 			<div class="large-4 columns">
 			<div class="work-item" data-project-id="project-1">
 				<div class="work-img-holder">
-				<a href="img/photos/photo-7.jpg" rel="shadowbox"><img src="img/thumbnails/thumbnail-7.jpg"></a>
+				<a href="img/photos/photo-4.JPG" rel="shadowbox"><img src="img/thumbnails/thumbnail-4.jpg"></a>
 				</div>
 			</div>
 		</div>
@@ -405,7 +377,7 @@
 			<div class="large-4 columns">
 			<div class="work-item" data-project-id="project-1">
 				<div class="work-img-holder">
-				<a href="img/photos/photo-8.jpg" rel="shadowbox"><img src="img/thumbnails/thumbnail-8.jpg"></a>
+				<a href="/img/photos/photo-5.JPG" rel="shadowbox"><img src="img/thumbnails/thumbnail-5.jpg"></a>
 				</div>
 			</div>
 		</div>
@@ -413,7 +385,35 @@
 			<div class="large-4 columns">
 			<div class="work-item" data-project-id="project-1">
 				<div class="work-img-holder">
-				<a href="img/photos/photo-9.jpg" rel="shadowbox"><img src="img/thumbnails/thumbnail-9.jpg"></a>
+				<a href="img/photos/photo-6.JPG" rel="shadowbox"><img src="img/thumbnails/thumbnail-6.jpg"></a>
+				</div>
+			</div>
+		</div>
+
+	</div>
+
+	<div class="row work-row">
+
+			<div class="large-4 columns">
+			<div class="work-item" data-project-id="project-1">
+				<div class="work-img-holder">
+				<a href="img/photos/photo-7.JPG" rel="shadowbox"><img src="img/thumbnails/thumbnail-7.jpg"></a>
+				</div>
+			</div>
+		</div>
+
+			<div class="large-4 columns">
+			<div class="work-item" data-project-id="project-1">
+				<div class="work-img-holder">
+				<a href="img/photos/photo-8.JPG" rel="shadowbox"><img src="img/thumbnails/thumbnail-8.jpg"></a>
+				</div>
+			</div>
+		</div>
+
+			<div class="large-4 columns">
+			<div class="work-item" data-project-id="project-1">
+				<div class="work-img-holder">
+				<a href="img/photos/photo-9.JPG" rel="shadowbox"><img src="img/thumbnails/thumbnail-9.jpg"></a>
 				</div>
 			</div>
 		</div>
