photo changes, dude

--- a/index.html
+++ b/index.html
@@ -333,6 +333,36 @@
 		</div>
 	</div>
 
+
+<div class="row work-row">
+
+			<div class="large-4 columns">
+			<div class="work-item" data-project-id="project-1">
+				<div class="work-img-holder">
+				<a href="img/photos/photo-11.jpg" rel="shadowbox"><img src="img/thumbnails/thumbnail-11.jpg"></a>
+				</div>
+			</div>
+		</div>
+
+			<div class="large-4 columns">
+			<div class="work-item" data-project-id="project-1">
+				<div class="work-img-holder">
+				<a href="img/photos/photo-10.jpg" rel="shadowbox"><img src="img/thumbnails/thumbnail-10.jpg"></a>
+				</div>
+			</div>
+		</div>
+
+			<div class="large-4 columns">
+			<div class="work-item" data-project-id="project-1">
+				<div class="work-img-holder">
+				<a href="img/photos/photo-12.jpg" rel="shadowbox"><img src="img/thumbnails/thumbnail-12.jpg"></a>
+				</div>
+			</div>
+		</div>
+
+	</div>
+
+
 	<div class="row work-row">
 
 		<div class="large-4 columns">
@@ -420,6 +450,7 @@
 		</div>
 
 	</div>
+
 
 
 </section>
