--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 				<h5>HONEYMOON</h5>
 				<div class="hr large-3 small-3"></div>
 				<p>
-					We're planning a fall tour of New England.
+					We're planning to go on a beach getaway.
 					If you would like to donate to our honeymoon fund in lieu of a wedding gift, please click on the PayPal link below.<br><br>
 					<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
